src/tests/fixtures/type_definitions/ClassWithoutAName.invalid.ts
/**
 * @GQLType
 */
export default class {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
}
